updated the height display of the tech page stage feature to fix some stretching in mobile devices

--- a/templates/css/theme.css
+++ b/templates/css/theme.css
@@ -716,7 +716,7 @@ Modules
 	}
 
 	.tech-hero-img {
-		height: 100%;
+		max-height: 100%;
 		width: auto;
 	}
 	
